# code-sample-2026

./: .gitignore  CMakeLists.txt  LICENSE  README.md
game/: CMakeLists.txt  constants.h  main.cpp  manager.cpp  manager.h  states.h
game/designs/: arena.aseprite  drain.aseprite  launcher.aseprite  marble.aseprite  player.aseprite  post.aseprite
game/game/: arena.cpp  arena.h  collisiondetection.cpp  collisiondetection.h  collisionmanager.cpp  collisionmanager.h  game.cpp  game.h  gamestate.cpp  gamestate.h  launcher.cpp  launcher.h  marble.cpp  marble.h  marblepool.cpp  marblepool.h  physicsbody.cpp  physicsbody.h  player.cpp  player.h  wall.cpp  wall.h
game/gameover/: gameover.cpp  gameover.h
game/title/: title.cpp  title.h
game/utils/: animation.cpp  animation.h  clock.cpp  clock.h  fsm.cpp  fsm.h  grid.cpp  grid.h  shapes.cpp  shapes.h
include/core/: audio.h  controls.h  system.h  utility.h  window.h
src/: CMakeLists.txt  audio.cpp  controls.cpp  system.cpp  utility.cpp  window.cpp
src/shaders/: texture.frag  texture.vert
src/utilities/: font.cpp  font.h  magofont3.cpp  platformcontrols.h  platformcontrols_sdl.cpp  shaderhelper.cpp  shaderhelper.h  texturehelper.cpp  texturehelper.h  wavheaderdata.cpp  wavheaderdata.h
